[gd_scene load_steps=2 format=3 uid="uid://8ylyvbavcb4k"]

[ext_resource type="Script" path="res://manager/ammo_manager.gd" id="1_y0f6m"]

[node name="AmmoManager" type="Node2D"]
script = ExtResource("1_y0f6m")

[connection signal="ammo_changed" from="." to="." method="_on_ammo_changed"]
